--- a/basic_node_TDD/package.json
+++ b/basic_node_TDD/package.json
@@ -17,6 +17,8 @@
     "supertest": "^3.0.0",
     "supervisor": "^0.12.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.18.2"
+  },
   "description": ""
 }
